Get logged user from session's principal and session attributes

--- a/arender-viewer-core/pom.xml
+++ b/arender-viewer-core/pom.xml
@@ -24,5 +24,9 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
